Fix wiki-preview text is misaligned #14

--- a/src/styles/components/_issues.scss
+++ b/src/styles/components/_issues.scss
@@ -259,6 +259,10 @@ div#update .jstTabs.tabs li a {
   }
 }
 
+.tabular div.wiki-preview p {
+  padding-left: 5px;
+}
+
 .tabular label {
   margin-left: -160px;
   width: 150px;
