--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -570,6 +570,9 @@ div#update .jstTabs.tabs li a {
   .edit_issue .tabular p {
     padding-left: 130px; }
 
+.tabular div.wiki-preview p {
+  padding-left: 5px; }
+
 .tabular label {
   margin-left: -160px;
   width: 150px; }
